<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:minHeight="@dimen/list_item">

            <ImageView
                android:layout_height="@dimen/size_icon"
                android:layout_width="@dimen/size_icon"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_normal"
                android:src="@drawable/ic_phone_24dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginStart="@dimen/spacing_large"
                android:orientation="vertical"
                android:paddingEnd="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large">

                <TextView
                    android:id="@+id/person_phone"
                    style="@style/font.medium"
                    android:text="@string/person_phone" />

                <TextView
                    android:id="@+id/phone_label"
                    style="@style/font.regular"
                    android:text="@string/label_mobile"
                    android:textAlignment="viewStart"
                    tools:ignore="RtlCompat,UnusedAttribute" />

            </LinearLayout>

            <View style="@style/profile_strip" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:minHeight="@dimen/list_item">

            <ImageView
                android:layout_width="@dimen/size_icon"
                android:layout_height="@dimen/size_icon"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_normal"
                android:src="@drawable/ic_email_24dp" />

            <LinearLayout
                android:id="@+id/linearLayout_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginStart="@dimen/spacing_large"
                android:orientation="vertical"
                android:paddingEnd="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large">

                <TextView
                    android:id="@+id/profile_email"
                    style="@style/font.medium"
                    android:text="@string/person_email"/>

                <TextView
                    android:id="@+id/email_label"
                    style="@style/font.regular"
                    android:text="@string/label_email"/>

            </LinearLayout>

            <View style="@style/profile_strip" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:minHeight="@dimen/list_item">

            <ImageView
                android:layout_width="@dimen/size_icon"
                android:layout_height="@dimen/size_icon"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_normal"
                android:src="@drawable/vk_icon" />

            <LinearLayout
                android:id="@+id/linearLayout_vk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginStart="@dimen/spacing_large"
                android:orientation="vertical"
                android:paddingEnd="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large">

                <TextView
                    android:id="@+id/profile_vk"
                    style="@style/font.medium"
                    android:text="@string/person_vk" />

                <TextView
                    android:id="@+id/vk_label"
                    style="@style/font.regular"
                    android:text="@string/label_vk" />

            </LinearLayout>

            <View style="@style/profile_strip" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:minHeight="@dimen/list_item">

            <ImageView
                android:layout_width="@dimen/size_icon"
                android:layout_height="@dimen/size_icon"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_normal"
                android:src="@drawable/git_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginStart="@dimen/spacing_large"
                android:orientation="vertical"
                android:paddingEnd="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large">

                <TextView
                    android:id="@+id/profile_git"
                    style="@style/font.medium"
                    android:text="@string/person_git" />

                <TextView
                    android:id="@+id/git_label"
                    style="@style/font.regular"
                    android:text="@string/label_git"/>

            </LinearLayout>

            <View style="@style/profile_strip" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:minHeight="@dimen/list_item">

            <ImageView
                android:layout_width="@dimen/size_icon"
                android:layout_height="@dimen/size_icon"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_normal"
                android:src="@drawable/ic_location_history_24dp" />

            <LinearLayout
                android:id="@+id/linearLayout_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginStart="@dimen/spacing_large"
                android:orientation="vertical"
                android:paddingEnd="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large">

                <TextView
                    android:id="@+id/about"
                    style="@style/font.medium"
                    android:text="@string/person_about" />

                <TextView
                    android:id="@+id/about_label"
                    style="@style/font.regular"
                    android:text="@string/label_about"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>


