<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleView"
        android:layout_width="@dimen/nav_header_avatar"
        android:layout_height="@dimen/nav_header_avatar"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/avatar_top_margin"
        android:src="@raw/nofoto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/subtitle"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/circleView"
        android:layout_alignStart="@+id/circleView"
        android:gravity="center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/person_name"
            android:textSize="@dimen/text_size_14sp"
            android:id="@+id/textView7"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/person_email"
            android:textSize="@dimen/text_size_14sp"
            android:id="@+id/textView8" />

    </LinearLayout>

    <TextView
        android:layout_width="@dimen/rating_circle_width"
        android:layout_height="@dimen/rating_circle_height"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/person_rating"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_18sp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignTop="@+id/circleView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>